--- a/src/page/about/index.scss
+++ b/src/page/about/index.scss
@@ -29,6 +29,9 @@
       position: relative;
       top: -27px;
       padding-left: 110px;
+      li{
+          margin-bottom: 10px;
+      }
     }
   }
 }
