--- a/src/project/priceCalendar/demo/index.scss
+++ b/src/project/priceCalendar/demo/index.scss
@@ -2,7 +2,6 @@
   .calendarContainer{
     margin-top: 20px;
     border:1px solid #e5e5e5;
-    width: 400px;
     padding: 20px;
     position: relative;
     *{
@@ -18,13 +17,18 @@
     }
   }
 
+  .calendarLine:first-child{
+    margin-top: 20px;
+  }
+
   .calendarLine{
     width: 100%;
-    margin-top: 20px;
     text-align: center;
     p{
+      position: relative;
       cursor: pointer;
-      width: 40px;
+      width: 60px;
+      padding: 5px 15px;;
     }
     p:hover{
       background: #d1e9ff;
@@ -51,8 +55,17 @@
     transition: all .3s;
   }
 
+  .rest{
+    position: absolute;
+    right: 0;
+    top: 0;
+    color:red;
+  }
+
   .disabled-date{
-    color:rgba(0,0,0,0.25)
+    color:rgba(0,0,0,0.25);
+    cursor:not-allowed;
+    pointer-events: none;
   }
 
   .price{
