--- a/src/project/priceCalendar/demo/index.scss
+++ b/src/project/priceCalendar/demo/index.scss
@@ -28,7 +28,7 @@
       position: relative;
       cursor: pointer;
       width: 60px;
-      padding: 5px 15px;;
+      padding: 5px 10px;;
     }
     p:hover{
       background: #d1e9ff;
@@ -70,5 +70,17 @@
 
   .price{
     color:#ff5722bf;
+    font-size:12px;
+  }
+
+  .loading{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #dadada;
+    opacity: 0.65;
+    z-index: 10;
   }
 }
