--- a/src/project/complexTask/demo/index.scss
+++ b/src/project/complexTask/demo/index.scss
@@ -4,7 +4,44 @@
   }
   .modalTitle{
     margin-bottom: 40px;
-    color:#1890ff;
-    font-size: 24px;
+    font-size: 30px;
+    i{
+      font-size: 40px;
+      padding-right: 20px; 
+    }
+  }
+  .explain{
+    span{
+      font-size: 22px;
+      font-weight: 400;
+      padding: 0 10px;
+    }
+  }
+  .detailBox{
+    width: 100%;
+    padding: 20px 40px;
+    background: #F0F3F5;
+    margin-top: 20px;
+    i{
+      padding-right: 10px;
+    }
+  }
+
+  .btnConatiner{
+    width: 100%;
+    padding: 30px 30px 0 0;
+  }
+
+  .green{
+    color:#67C23A;
+  }
+  .blue{
+    color: #1890ff;
+  }
+  .red{
+    color:#F56C6C;
+  }
+  .gray{
+    color:#c7c7c7;
   }
 }
