--- a/src/layout/header/index.scss
+++ b/src/layout/header/index.scss
@@ -24,5 +24,9 @@
       color: #c6a76d;
       font-size: 45px;
     }
+    .icon{
+      cursor: pointer;
+      text-decoration: none;
+    }
   }
 }
