--- a/src/page/about/index.scss
+++ b/src/page/about/index.scss
@@ -9,6 +9,9 @@
     height: 50px;
     line-height: 40px;
   }
+  .excel{
+    cursor: pointer;
+  }
   .content {
     border-radius: 2px;
     background: #fff;
