--- a/src/page/about/index.scss
+++ b/src/page/about/index.scss
@@ -9,8 +9,21 @@
     height: 50px;
     line-height: 40px;
   }
-  .excel{
+  .resume{
+    padding-left: 15px;
     cursor: pointer;
+  }
+  .projectItem{
+    h2{
+      padding-bottom: 20px; 
+    }
+    p{
+      padding: 5px 0;
+    }
+    img{
+      width: 100%;
+      height: auto;
+    }
   }
   .content {
     border-radius: 2px;
@@ -18,6 +31,8 @@
     padding: 20px;
     padding-left: 40px;
     i {
+      display: inline-block;
+      width: 30px;
       font-size: 24px;
     }
     &>div {
