--- a/src/project/priceCalendar/demo/index.scss
+++ b/src/project/priceCalendar/demo/index.scss
@@ -79,8 +79,10 @@
     position: absolute;
     left: 0;
     top: 0;
-    background: #dadada;
+    background: #e6f7ff;
     opacity: 0.65;
     z-index: 10;
+    border: 1px solid #91d5ff;
+    box-sizing: border-box;
   }
 }
