--- a/src/project/flip-preview/demo/index.scss
+++ b/src/project/flip-preview/demo/index.scss
@@ -1,57 +1,59 @@
-.pic-item {
-  position: relative;
-  display: inline-block;
-  width: 100px;
-  overflow: hidden;
-  font-size: 0;
-  border-radius: 10px;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.pic-item::before {
-  content: ' ';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  cursor: pointer;
-  background-color: rgba(0,0,0,0.5);
-  transition: all .3s;
-  z-index: 1;
-}
-.pic-item:hover::before {
-  opacity: 1;
-}
-.pic {
-  width: 100%;
-}
-
-.preview-box {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: 0.6;
-  background-color: #000;
-  transition: opacity .36s ease-in-out;
-  z-index: 1000;
-}
-.img {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  max-width: 100%;
-  max-height: 100%;
-  border-radius: 10px;
-  z-index: 1002;
-}
-.img.active {
-  transition: all .36s ease-in-out;
+:local{
+  .blockItem{
+    color:#fff;
+    border-radius: 10px;
+    position: relative;
+    font-size: 16px;
+    transition: all .3s;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+  .blockItem::before{
+    content: ' ';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+    border-radius: 10px;
+    background-color: rgba(0,0,0,0.5);
+    transition: all .3s;
+    z-index: 1
+  }
+  .blockItem:hover::before{
+    opacity: 1
+  }
+  .pickItem{
+    color:#fff;
+    border-radius: 10px;
+    position: relative;
+    font-size: 16px;
+    transition: all .3s;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+  .putPositionItem{
+    color:#fff;
+    border-radius: 10px;
+    position: relative;
+    font-size: 16px;
+    transform-origin: 0 0;
+    opacity: 0;
+    // transform: scale(2,2);
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+  .transition{
+    transition: all .36s ease-in-out;
+  }
+  .layer{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    background-color: rgba(0,0,0,0.8);
+    transition: all .3s ease-in-out;
+    z-index: 1000;
+  }
 }
