--- a/src/project/flip-preview/demo/index.scss
+++ b/src/project/flip-preview/demo/index.scss
@@ -37,8 +37,7 @@
     border-radius: 10px;
     position: relative;
     font-size: 16px;
-    transform-origin: 0 0;
-    opacity: 0;
+    transform-origin: 50% 50%;
     // transform: scale(2,2);
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
