--- a/src/project/draggabilly/demo/index.scss
+++ b/src/project/draggabilly/demo/index.scss
@@ -54,6 +54,8 @@
 			background: #fff;
 			width: 50px;
 			height: 50px;
+			transition: width .3s ease-in-out;
+			transition: height .3s ease-in-out;
 			.textContent{
 				display: inline-block;
 				background: #ddd;	
