--- a/src/page/about/index.scss
+++ b/src/page/about/index.scss
@@ -24,6 +24,12 @@
       width: 100%;
       height: auto;
     }
+    .electron_app_icon{
+        width:50px;
+        height: 50px;
+        cursor: pointer;
+        margin-left: 20px;
+    }
   }
   .content {
     border-radius: 2px;
